--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
           <img src="assets/Logo_upitra 1.png" alt="" />
           <h1>UPITRA</h1>
         </div>
+        <div class="hamburger-menu-button"></div>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Satgas</a></li>
-          <li><a href="#">Pengaduan</a></li>
+          <div class="close-menu-button"></div>
+          <li><a href="#jumbotron">Home</a></li>
+          <li><a href="#tentang-kami">About</a></li>
+          <li><a href="#penanganan-dan-tindaklanjut">Satgas</a></li>
+          <li><a href="#pengaduan-kasus">Pengaduan</a></li>
         </ul>
+       <div class="close-menu-overlay"></div>
       </nav>
     </header>
 
@@ -50,7 +53,7 @@
             <p class="jumbotron-p">Penanganan Kekerasan</p>
             <br />
           </div>
-          <button>Selengkapnya</button>
+          <a href="#tentang-kami">Selengkapnya</a>
         </div>
       </section>
 
@@ -307,10 +310,10 @@
               Laporkan jika ada tindak kekerasan yang terjadi di lingkungan kampus
             </p>
           </div>
-          <a href="#">
+          <a href="https://wa.me/6285320833839">
             <button>Laporkan Sekarang via WhatsApp</button>
           </a>
-          <a href="#">
+          <a href="https://forms.gle/927CXyUoczn7oBtN9">
             <button>Laporkan Sekarang via Form</button>
           </a>
         </div>
