--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PPKPT - Upitra</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/Logo_upitra 1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,7 +32,7 @@
           <div class="close-menu-button"></div>
           <li><a href="#jumbotron">Home</a></li>
           <li><a href="#tentang-kami">About</a></li>
-          <li><a href="#penanganan-dan-tindaklanjut">Satgas</a></li>
+          <li><a href="#dampak">Satgas</a></li>
           <li><a href="#pengaduan-kasus">Pengaduan</a></li>
         </ul>
        <div class="close-menu-overlay"></div>
