--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body class="loading">
     <div id="loading-screen">
       <div class="loading-content">
-        <div class="loading-subtitle">Memuat Halaman</div>
+        <div class="loading-subtitle">Loading</div>
         <div class="progress-container">
           <div class="progress-bar" id="progress-bar"></div>
         </div>
