--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
       <header id="nav-scroll">
         <nav>
           <div class="logo">
-            <img src="assets/Logo_upitra 1.png" alt="" />
-            <h1>UPITRA</h1>
+            <a href="/">
+              <img src="assets/Logo_upitra 1.png" alt="" />
+              <h1>UPITRA</h1>
+            </a>
           </div>
           <div class="hamburger-menu-button"></div>
           <ul>
