--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <main>
         <section id="jumbotron">
-          <img src="assets/image 1.png" alt="Background" class="jumbotron-bg" />
+          <img src="assets/Frame 2.png" alt="Background" class="jumbotron-bg" />
           <div class="jumbotron-content">
             <div class="text-container">
               <p class="jumbotron-p">Satgas</p>
